@@ -16,6 +16,7 @@
 #define IDI_OK                          1009
 #define IDI_ERR                         1010
 #define IDC_CHECK_SENDUP                1010
+#define IDC_CHECK_REPEAT                1012
 
 // Next default values for new objects
 // 
@@ -23,7 +24,7 @@
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_NEXT_RESOURCE_VALUE        1013
 #define _APS_NEXT_COMMAND_VALUE         32771
-#define _APS_NEXT_CONTROL_VALUE         1011
+#define _APS_NEXT_CONTROL_VALUE         1013
 #define _APS_NEXT_SYMED_VALUE           1009
 #endif
 #endif
